--- a/Txt-Front/Pag_53.html
+++ b/Txt-Front/Pag_53.html
@@ -1,2 +1,3 @@
+<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
 <p> <abbr title="Aluno">Aluno</abbr> Maicon Lidemi é um estudante da Universidade Nove de Julho e estás em seu último semestre.</p>
 <p><acronym title="Acho que isso é um pop-up para explicar oq ta escrito"> Universidade</acronym> (...) </p>
