--- a/Txt-Front/Pag_65.html
+++ b/Txt-Front/Pag_65.html
@@ -1,1 +1,8 @@
 <!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<ol>
+    <li> Cerveja </li>
+    <li> HotDog </li>
+    <li> Chocolate </li>
+    <li> Suco </li>
+    <li> Pizza </li>
+</ol>
