--- a/Txt-Front/Pag_70.html
+++ b/Txt-Front/Pag_70.html
@@ -1,6 +1,6 @@
 <html> 
     <head> 
-        <title>1° __________ </title>
+        <title>1° Título da aba!!! </title>
     </head>
     <body>
         <h1> _A_B_C_D_E_F </h1>
