--- a/Txt-Front/Pag_99.html
+++ b/Txt-Front/Pag_99.html
@@ -1,2 +1,2 @@
-<img src= "images/quokka.jpg" alt="familia de esquilos" title="Esquilos na Australia."/> 
-    <img src="images/quokka.jpg" alt= "_____" width="600" height="______" />
+<img src= "/Txt-Front/IMGS/Thanos.png" alt="familia de esquilos" title="Esquilos na Australia."/> 
+    
