--- a/Txt-Front/Pag_B122.html
+++ b/Txt-Front/Pag_B122.html
@@ -17,8 +17,8 @@
         <h4> Um título aqui para as imagens </h4>
         <p>
             <img src="IMGS/Jill.png" alt="blablabla1" title="Jill V. Gatinha" width="350" height="500"/>
-            <img src="______" alt="blablabla2" title="_________" />
-            <img src="______" alt="blablabla3" title="_________" />
+            <img src="IMGS/Jill.png" alt="blablabla1" title="Jill V. Gatinha" width="350" height="500"/>
+            <img src="IMGS/Jill.png" alt="blablabla1" title="Jill V. Gatinha" width="350" height="500"/>
         </p>
     </body>
 </html>
