--- a/Txt-Front/Pag_43.html
+++ b/Txt-Front/Pag_43.html
@@ -1,7 +1,7 @@
-	  <!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+	  <!-- Página 43 - Títulos -->
 <h1> Usado para títulos principais </h1>
 <h2> Usado para subtítulos de nível 2 </h2>
 <h3> Usado para subtítulos de nível 3 </h3>
 <h4> Usado para subtítulos de nível 4 </h4>
 <h5> Usado para subtítulos de nível 5 </h5>
-<h6> Usado para subtítulos de nível 6 </h5>
+<h6> Usado para subtítulos de nível 6 </h6>
