--- a/Txt-Front/Pag_45-2.html
+++ b/Txt-Front/Pag_45-2.html
@@ -1,3 +1,3 @@
-	  <!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+	  <!-- Pagina45-2, Negrito Italico -->
 <p> Eu gosto de comer churros com recheio de <i> chocolate </i> é muito bom. </p>
 <p> E pensar que essa guerra na <i>Ucrania x Rússia</i> ainda esta durando quase 1 mês inteiro. </p>
