--- a/Txt-Front/Pag_46.html
+++ b/Txt-Front/Pag_46.html
@@ -1,3 +1,3 @@
-	  <!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+	  <!-- Pagina 46, Sobrescrito & Subscrito. -->
 <p> Aqui seria para elevar letras e números <sup>th2</sup>. </p>
 <p> Já esse aqui abaixa caracteres e números <sub>ABC3</sub>. </p>
