--- a/Txt-Front/Pag_48.html
+++ b/Txt-Front/Pag_48.html
@@ -1,4 +1,4 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!-- Pagina 48, Quebras de linha & linhas horizontais -->
 <p> O br serve para quebrar uma linha <br> vamos dar um exemplo aqui dentro</br> Dando continuidade a nossa escrita </p>
 <p> Já o hr faz um traçado
     <hr />
