--- a/Txt-Front/Pag_51-2.html
+++ b/Txt-Front/Pag_51-2.html
@@ -1,4 +1,4 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!-- Pagina 51, Forte & Enfâse. -->
 <p> <em> Olá </em> sejam  todos bem vindos. </p>
 <p> Olá sejam <em> todos </em> bem vindos. </p>
 <p> Olá sejam todos bem <em> vindos</em>. </p>
