--- a/Txt-Front/Pag_52.html
+++ b/Txt-Front/Pag_52.html
@@ -1,3 +1,4 @@
+<!-- Página 52, Citações. -->
 <blockquote cite="https://citacoes.in/citacoes/584648-steve-jobs-cada-sonho-que-voce-deixa-pra-tras-e-um-pedaco-do/">
     <p> Cada pedaço que você deixa pra trás, é um pedaço do seu futuro que deixa de existir. </p>
     <p> Aristoteles: <q> Os mentirosos quando falam a verdade não se acredita. </q> </p>
