--- a/Txt-Front/Pag_55.html
+++ b/Txt-Front/Pag_55.html
@@ -1,4 +1,4 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!-- Pagina 55, Detalhes do autor.-->
 <address> 
-<p><a href="https://outlook.live.com/mail/0/"> Um_Emaildeexemploaqui@hotmail.com </a></p>    
+<p><a href="https://outlook.live.com/mail/0/"> Um_Emaildeexemploaqui@hotmail.com </a> Nosso e-mail pra contato! </p>    
 </address>
