--- a/Txt-Front/Pag_56-1.html
+++ b/Txt-Front/Pag_56-1.html
@@ -1,2 +1,2 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!-- Página 56, Alterações no conteúdo.-->
 <p> Por exemplo eu gosto muito de doce porém eu trocaria fácil <del>doce</del> por um <ins>salgado</ins>
