--- a/Txt-Front/Pag_57-58.html
+++ b/Txt-Front/Pag_57-58.html
@@ -1,14 +1,12 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!--Página 58, Exemplo!-->
 <html>
     <head> 
-
+        <title> Um Exemplo </title>
     </head>
     <body>
-        <h1> Uma história pra se contar.</h1>
-        <h2> Primeiro capítulo </h2>
-        <p> Era uma vez um jovem programador chamado Maicon Lidemi, ele entrou na Universidade Nove de Julho e aprendeu algumas coisas de <i>programação</i> </p><i>Porém</i> passou-se um tempo um tempo e ele começou aprender bem mais por livros e cursos que a universidade em si <cite> (Universidade Nove De Julho) </cite>.
-        <p> 
-            Escrevendo um último texto para colocar em prática os exemplos do livro <q> este q é para citações menores ao meu entender </q> <abbr title="dragon ball super">Goku</abbr>. Goku só foi pra testar a tag, ficou fora de contexto eu <em>sei.</em></p>
-        </p>
+        <h1> Um título aqui ! </h1>
+        <h2> Um subtítulo aqui ! </h2>
+        <p> Estou escrevendo esse pequeno pensamento para mostrar as funções das tags em HTML, por exemplo essa <i> que deixa a palavar </i> assim, <i> blablabla </i> Continuando nosso texto <cite> serve para isso </cite> </p>
+        <p> Hoje eu estou bem cansado cheguei da academia, depois de um treino de 2 horas, nesse exato momento é <q> 23:08 horas, estou com meu corpo todo doendo e ainda vou estudar T.T </q> <abbr title="Descrever essa palavra">MARVEL</abbr>, Gosto de super heróis são bem legais principalmente o <em> Homem de Ferro. </em> </p>
     </body>
 </html>
