--- a/Txt-Front/Pag_65.html
+++ b/Txt-Front/Pag_65.html
@@ -1,4 +1,4 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!-- Pagina 65, Listas Ordenadas! -->
 <ol>
     <li> Cerveja </li>
     <li> HotDog </li>
