--- a/Txt-Front/Pag_67.html
+++ b/Txt-Front/Pag_67.html
@@ -1,4 +1,4 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!-- Página 67, Listas de Definição-->
 <dl> 
     <dl> Controle </dl>
     <dd> Comendo algo aqui dentro pra ver o que vai acontecer ao termino dessa escrita </dd>
