--- a/Txt-Front/Pag_70.html
+++ b/Txt-Front/Pag_70.html
@@ -1,3 +1,4 @@
+<!-- Página 70, Exemplo Listas-->
 <html> 
     <head> 
         <title>1° Título da aba!!! </title>
@@ -14,9 +15,9 @@
         <h2> Ingredientes² </h2>
         <ol>
             <li> Escreva-Escreva-Escreva Escreva-Escreva-Escreva-Escreva-Escreva-Escreva </li>
-            <li> </li>
-            <li> </li>
-            <li> </li>
+            <li> Bla-Bla-BlaBla-Bla-Bla-Bla-Bla-Bla-Bla-Bla-Bla-Bla-Bla-Bla-Bla-Bla-Bla  </li>
+            <li> XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX-XoX </li>
+            <li> G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G-G_G </li>
         </ol>
     </body>
 </html>
