--- a/Txt-Front/Pag_87.html
+++ b/Txt-Front/Pag_87.html
@@ -1,9 +1,10 @@
+<!--Página 87, link para uma parte específica da mesma página -->
 <h1 id="top"> Disney +, Netflix, Prime</h1>
 <a href="#Inicio"> inicio</a><br />
 <a href="#Meio"> meio</a><br />
 <a href="#Fim"> fim</a><br />
-<h2 id="Series"> SERIES MOVIES </h2>
-<p> Escreva um pouco das suas séries  favoritas dentro desse pequeno parágrafo ... </p>
+<h2 id="Series"> SOULS </h2>
+<p> Dark Souls é um jogo de RPG eletrônico conhecido por sua alta dificuldade e desafios intensos. Ambientado em um mundo sombrio e misterioso, o jogo exige que o jogador explore e enfrente diversos perigos para sobreviver. A morte é uma constante no jogo, fazendo com que o jogador aprenda com seus erros e aprimore suas habilidades para progredir. Com uma narrativa envolvente e mecânica de jogo desafiadora, Dark Souls é uma experiência única e intensa para os fãs do gênero. </p>
 <h2 id="Avaliacao"> NOTA FINAL </h2>
 <p> 10, 9 , 7, 5, 2 </p>
 <p><a href="#top">TOP</a></p>
