--- a/Txt-Front/Pag_99.html
+++ b/Txt-Front/Pag_99.html
@@ -1,2 +1,3 @@
+<!--Página 99, Adicionando imagens-->
 <img src= "/Txt-Front/IMGS/Thanos.png" alt="familia de esquilos" title="Esquilos na Australia."/> 
     
