--- a/Txt-Front/Pag_B100.html
+++ b/Txt-Front/Pag_B100.html
@@ -1,1 +1,2 @@
+<!--Página 100, Alutura & Largura das imagens-->
 <img src="/Txt-Front/IMGS/Thanos.png" alt= "Titan louco das jóias do infinito!" width="600" height="450" />
