--- a/Txt-Front/Pag_B105.html
+++ b/Txt-Front/Pag_B105.html
@@ -1,3 +1,4 @@
+<!--Página 105,  Alinhamento vertical-->
 <p> <img src="imgs/Tanjiro.png" alt="Protagonista do anime" width="100" height="100" align="top" /> Tanjiro é o protagonista do mangá e anime "Demon Slayer: Kimetsu no Yaiba". Ele é um jovem bondoso e dedicado que se torna um caçador de demônios depois que sua família é brutalmente assassinada por um demônio, com exceção de sua irmã mais nova Nezuko, que é transformada em um demônio.
 
     Como um caçador de demônios, Tanjiro se esforça para proteger as pessoas e encontrar uma cura para Nezuko, ao mesmo tempo em que luta contra demônios perigosos e poderosos. Ele é um espadachim habilidoso, tendo treinado intensamente para se tornar forte o suficiente para enfrentar os demônios, mas também é compassivo e tenta encontrar maneiras de salvar tanto os humanos quanto os demônios.
