--- a/Txt-Front/Pag_20.html
+++ b/Txt-Front/Pag_20.html
@@ -1,12 +1,12 @@
+	  <!-- Página 20 - Estrutura da página-->
 <html>
   <body>
-	  <!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
-	<h1> Isso é um título de cabeçalho </h1>
+	<h1> Isso é um título de cabeçalho - h1 </h1>
 <p> Escrevendo algo dentro deste paragrafo para ver como 
 	irá ficar ao executar na web </p>
-<h2> Subtítulo nível 2 </h2>
+<h2> Subtítulo nível 2 - h2 </h2>
 <p> Escrevendo mais um pouco pra ver como vai executar no EDGE </p>
-<h2> mais outro subtítulo </h2>
+<h2> mais outro subtítulo - h2</h2>
 <p> Mais outro parágrafo de demonstração </p>
  </body>
 </html>
