--- a/Txt-Front/Pag_44.html
+++ b/Txt-Front/Pag_44.html
@@ -1,3 +1,3 @@
-	  <!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+	  <!-- Página 44 - Parágrafos! -->
 <p> Preencher um parágrafo para escrever determinadas coisas aqui como exemplo de teste para o front-end </p>
 <p> Mais um exemplo de parágrafo para ser interpretado pelo navegador </p>
