--- a/Txt-Front/Pag_51-1.html
+++ b/Txt-Front/Pag_51-1.html
@@ -1,3 +1,3 @@
-<!-- Exemplos de teste de códigos tirados do livro Html & Css de Jon Duckett -->
+<!-- Pagina 51, Forte & Enfâse! -->
 <p> <strong>Cores:</strong> Azul, amarelo, vermelho, preto, verde, rosa, roxo.</p>
 <p> Lembro-me de uma frase de filme em que falava assim: <strong>"Com grandes poderes vem grandes responsabilidades"</strong> - Tio Ben.
