--- a/Txt-Front/Pag_B101.html
+++ b/Txt-Front/Pag_B101.html
@@ -1,3 +1,4 @@
+<!--Página 101, onde posicionar as imagens no código-->
 <img src="IMGS/ELDEN.jpg" alt="Game dificil" width="100" height="100"/>
 <p> Elden Ring é um jogo de RPG de ação em mundo aberto desenvolvido pela FromSoftware e supervisionado por Hidetaka Miyazaki, o criador de Dark Souls. Ambientado em um mundo vasto e interconectado, os jogadores enfrentam desafios brutais e exploram uma narrativa envolvente enquanto forjam alianças e lutam contra inimigos mortais. </p>
 <hr />
