--- a/Txt-Front/Pag_B122.html
+++ b/Txt-Front/Pag_B122.html
@@ -5,6 +5,7 @@
     <body>
         <h1>
             <img src="IMGS/RE.gif" alt="Heeeelp Leoon!"/>
+        <!--Página 122, EXEMPLO-->
         </h1>
         <figure>
             <img src="IMGS/RE4.jpg" alt="Jill Valentine RE" title="Jogos favoritos do Resident Evil" width="600" height="500"/>
